--- a/index.template.html
+++ b/index.template.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Blog</title>
+    <title>Fearless Bee</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>My Blog</h1>
+        <h1>A fearless Bee</h1>
         <p>A collection of thoughts and notes.</p>
     </header>
 
@@ -20,7 +20,7 @@
     </main>
 
     <footer>
-        <p>Powered by GitHub Pages and a little bit of JavaScript.</p>
+        <p>Powered by GitHub Pages and a little bit of JavaScript</p>
     </footer>
 </body>
 </html>
